# server

./: .clang-format  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  AMX_IMPLEMENTATION_GUIDE.md  ANE_PERFORMANCE_PROFILING_REPORT.md  APPLE_SILICON_ACHIEVEMENTS.md  APPLE_SILICON_ADAPTATION_STRATEGY.md  APPLE_SILICON_BENCHMARK_RESULTS.md  APPLE_SILICON_COMPLETION_SUMMARY.md  APPLE_SILICON_PERFORMANCE_REPORT.md  BUILD_PY_FIXES_SUMMARY.md  CITATION.cff  CMAKE_4.0.3_SOLUTION.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  Chart.yaml  DEPENDENCIES_MACOS.md  Dockerfile  Dockerfile.QA  Dockerfile.build  Dockerfile.buildbase  Dockerfile.buildbase.s390x  Dockerfile.centos_client  Dockerfile.client  Dockerfile.custombackend  Dockerfile.debian12_rocm7.1  Dockerfile.debian12_rocm7.1_onnxruntime  Dockerfile.debian12_rocm7.2  Dockerfile.debian12_rocm7.2_vllm  Dockerfile.debian12_rocm7.2_vllm_base  Dockerfile.inprocess  Dockerfile.pubmatic-bt-tritonserver  Dockerfile.s390x  Dockerfile.sdk  Dockerfile.ubuntu22.04_rocm7.2  (+98 more)
backends/coreml/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  TROUBLESHOOTING.md  build_macos.sh  integrate_with_triton.sh  test_coreml_backend_macos.sh
backends/metal_mps/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  build_macos.sh  integrate_with_triton.sh
backends/pytorch/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  MPS_INTEGRATION.md  README.md  build_macos.sh  build_macos_mps.sh  download_libtorch_macos.sh  integrate_with_triton.sh  test_pytorch_backend_macos.sh
onnxruntime_backend/: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeLists.txt.macos  LICENSE  README.md  README_MACOS.md  build_macos.sh  pyproject.toml  setup_and_test_macos.sh
onnxruntime_backend/cmake/: TritonOnnxRuntimeBackendConfig.cmake.in  download_onnxruntime.cmake
onnxruntime_backend/src/: macos_support.patch  onnxruntime.cc  onnxruntime_loader.cc  onnxruntime_loader.h  onnxruntime_utils.cc  onnxruntime_utils.h
onnxruntime_backend/test/: CMakeLists.txt  test_macos_onnx_backend.cc  test_model_config.pbtxt
onnxruntime_backend/tools/: gen_ort_dockerfile.py
python_backend/: .gitignore  CMakeLists.txt  MACOS_IMPLEMENTATION.md  README.md  build_macos.sh  check_macos_deps.sh  pyproject.toml
python_backend/.devcontainer/: Dockerfile  devcontainer.json
python_backend/cmake/: TritonPythonBackendConfig.cmake.in
python_backend/inferentia/: README.md
python_backend/src/: correlation_id.cc  correlation_id.h  gpu_buffers.cc  gpu_buffers.h  infer_payload.cc  infer_payload.h  infer_request.cc  infer_request.h  infer_response.cc  infer_response.h  infer_trace.cc  infer_trace.h  ipc_message.cc  ipc_message.h  memory_manager.cc  memory_manager.h  message_queue.h  metric.cc  metric.h  metric_family.cc  metric_family.h  model_loader.cc  model_loader.h  pb_bls_cancel.cc  pb_bls_cancel.h  pb_cancel.cc  pb_cancel.h  pb_env.cc  pb_env.h  pb_error.cc  pb_error.h  pb_exception.h  pb_log.cc  pb_log.h  pb_map.cc  pb_map.h  pb_memory.cc  pb_memory.h  pb_metric_reporter.cc  pb_metric_reporter.h  (+27 more)
python_backend/test_models/: test_client.py
python_backend/tests/: CMakeLists.txt  README.md  verify_setup.sh
src/: CMakeLists.txt  amd_hipify.py  bindings.cc  classification.cc  classification.h  command_line_parser.cc  command_line_parser.h  common.cc  common.h  data_compressor.h  database_config.cc  database_config.h  example_python.py  grpc_server.cc  grpc_server.h  http_error_json.h  http_server.cc  http_server.h  http_server_macros.h  install.sh  kafka_endpoint.cc  kafka_endpoint.h  macos_socket_utils.h  main.cc  memory_alloc.cc  model_router.cc  model_router.h  model_router_README.md  model_router_benchmark.cc  model_router_config.h  model_router_example.cc  multi_infer.cc  multi_server.cc  mysql_odbc_connection_pool.cc  mysql_odbc_connection_pool.h  orca_http.cc  orca_http.h  platform_library.h  restricted_features.h  sagemaker_server.cc  (+16 more)
src/apple/: CMakeLists.txt  amx_backend_integration.h  amx_kernel_advanced.cc  amx_kernel_library.cc  amx_kernels.cc  amx_kernels.h  amx_metal_interop.cc  amx_metal_interop.h  amx_provider.cc  amx_provider.h  ane_performance_profiler.cc  ane_performance_profiler.h  ane_performance_profiler.mm  ane_provider.h  ane_provider.mm  ane_transformer_engine.h  apple_silicon_config.cc  apple_silicon_config.h  profile_guided_optimizer.cc  profile_guided_optimizer.h  test_amx.cc  winograd_conv3x3.cc  winograd_conv3x3.h
src/benchmarks/: apple_silicon_benchmarks.cc  visualize_benchmarks.py
src/cmake/: FindGperftools.cmake
src/core/: BUILD  CMakeLists.txt  api.proto  async_work_queue.cc  async_work_queue.h  autofill.cc  autofill.h  backend.cc  backend.h  backend_context.cc  backend_context.h  buffer_attributes.cc  buffer_attributes.h  common.proto  cond_var.h  constants.h  cuda_memory_manager.cc  cuda_memory_manager.h  cuda_utils.cc  cuda_utils.h  dcgm_metadata.h  dynamic_batch_scheduler.cc  dynamic_batch_scheduler.h  dynamic_batch_scheduler_v2.cc  dynamic_batch_scheduler_v2.h  ensemble_scheduler.cc  ensemble_scheduler.h  ensemble_utils.cc  ensemble_utils.h  filesystem.cc  filesystem.h  grpc_server.cc  grpc_server.h  grpc_service.proto  grpc_service_v2.proto  http_server.cc  http_server.h  infer.cc  infer.h  infer_parameter.cc  (+101 more)
src/custom/: CMakeLists.txt
src/grpc/: CMakeLists.txt  grpc_handler.cc  grpc_handler.h  grpc_server.cc  grpc_server.h  grpc_utils.cc  grpc_utils.h  infer_handler.cc  infer_handler.h  stream_infer_handler.cc  stream_infer_handler.h
src/metal/: CMakeLists.txt  CMakeLists_test_private_buffer.txt  CMakeLists_unified.txt  PERFORMANCE_MONITORING.md  PRIVATE_BUFFER_OPERATIONS.md  README.md  build_and_test_private_buffer.sh  example_metal_memory.cc  integration.patch  metal_allocator.cc  metal_allocator.h  metal_allocator.mm  metal_allocator_example.cc  metal_backend_integration.h  metal_backend_unified_integration.cc  metal_backend_unified_integration.h  metal_backend_utils.cc  metal_backend_utils.h  metal_command.h  metal_command.mm  metal_command_test.cc  (+21 more)
(+4235 files in other folders)
